<resources>
    <string name="app_name">Valentuna Remote J</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_a_device">Add A Device</string>
    <string name="auto_discover">Auto Discover</string>
    <string name="or">Or</string>
    <string name="add_manually">Add Manually</string>
    <string name="device">Device</string>
    <string name="start_play">Start Play</string>
    <string name="channel">Channel</string>
</resources>
