<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/videoRender"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="140dp"
        android:layout_width="fill_parent"
        android:layout_height="250dp" />

    <Spinner
        android:id="@+id/channel_spinner"
        android:layout_width="207dp"
        android:layout_height="34dp"
        android:layout_marginLeft="4dp" />

    <TextView
        android:id="@+id/textlabel"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/channel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/device_spinner"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/device" />

    <Button
        android:id="@+id/camLivePlay"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>