<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dev.adobongbangus.valentunaremotej.MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:text="@string/add_a_device"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:textColor="#368DEB"
        android:id="@+id/txtCreateAccount"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_weight="0.05"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.191"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnAutoDiscoverDevice"
        android:layout_width="279dp"
        android:layout_height="63dp"
        android:layout_weight="0.04"
        android:background="@drawable/auto_discover_buttom_style"
        android:text="@string/auto_discover"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.358"
        app:layout_constraintHorizontal_bias="0.505" />

    <TextView
        android:text="@string/or"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="326dp"
        android:layout_height="43dp"
        android:textColor="#000"
        android:id="@+id/txtOr"
        android:gravity="center"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
    <Button
        android:text="@string/add_manually"
        android:layout_width="278dp"
        android:layout_height="62dp"
        android:id="@+id/btnAddDeviceManual"
        android:textSize="15sp"
        android:background="@drawable/manual_add_button_style"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.642" />

</android.support.constraint.ConstraintLayout>
